--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
         .jw-rightclick .jw-reset {
             display: none;
         }
-        
+        .jw-video {
+
+transform: scale(1.2);
+
+        }
     </style>
 </head>
 
